--- a/packages/ui-library/src/css/inputs/_dropdown.scss
+++ b/packages/ui-library/src/css/inputs/_dropdown.scss
@@ -85,6 +85,16 @@ $option-padding: 7px $spacing-xl 7px $spacing-md;
             &:hover,
             &.highlighted {
                 @include option-list__item--active;
+                [data-id="formLabel"] {
+                    .label-text{
+                    cursor: pointer;
+                    font-weight: bold;
+                    color: $color-white;
+                    }
+                }
+                [data-id="styled-text"] {
+                    color: $color-white;
+                }
             }
             &.disabled {
                 @include option-list__item--disabled;
@@ -127,6 +137,7 @@ $option-padding: 7px $spacing-xl 7px $spacing-md;
             @include option-list__item--selected;
             [data-id="formLabel"] {
                 .label-text{
+                cursor: pointer;
                 font-weight: bold;
                 color: $color-black;
                 }
