--- a/packages/ui-library/src/css/layout/_messages.scss
+++ b/packages/ui-library/src/css/layout/_messages.scss
@@ -304,6 +304,10 @@
         }
     }
 
+    .inline-message-text {
+        @include break-word;
+    }
+
     &.warning,
     &.success,
     &.notice,
