--- a/packages/ui-library/src/css/text.scss
+++ b/packages/ui-library/src/css/text.scss
@@ -82,6 +82,14 @@
         white-space: nowrap;
         width: 100%;
     }
+
+    &--center {
+        text-align: center;
+    }
+
+    &--right {
+        text-align: right;
+    }
 }
 
 .textblock {
