--- a/packages/ui-library/src/css/inputs/_dropdown.scss
+++ b/packages/ui-library/src/css/inputs/_dropdown.scss
@@ -51,9 +51,10 @@ $option-padding: 7px $spacing-xl 7px $spacing-md;
         background-color: $color-midnight;
         display: inline-block;
         position: absolute;
-        top: 12px;
+        top: 50%;
         left: 7px;
 
+        @include transform(translateY(-50%));
         @include border-radius(1.5px);
     }
 }
@@ -85,14 +86,9 @@ $option-padding: 7px $spacing-xl 7px $spacing-md;
             &:hover,
             &.highlighted {
                 @include option-list__item--active;
-                [data-id="formLabel"] {
-                    .label-text{
+                .text-parent-label,
+                .text-value {
                     cursor: pointer;
-                    font-weight: bold;
-                    color: $color-white;
-                    }
-                }
-                [data-id="styled-text"] {
                     color: $color-white;
                 }
             }
@@ -135,12 +131,8 @@ $option-padding: 7px $spacing-xl 7px $spacing-md;
         }
         .selected {
             @include option-list__item--selected;
-            [data-id="formLabel"] {
-                .label-text{
-                cursor: pointer;
-                font-weight: bold;
-                color: $color-black;
-                }
+            .text-parent-label {
+                color: $color-strong-neutral-10;
             }
         }
         .none-option {
