--- a/packages/ui-library/src/css/text-styles.scss
+++ b/packages/ui-library/src/css/text-styles.scss
@@ -44,10 +44,14 @@ $body-text-color: $color-neutral-20;
 
 // PARENT LABEL
 @mixin parent-label {
-    @include text-style($color-elephant, $font-size-primary);
+    @include text-style($color-elephant);
     @include font-pn-semibold;
 
     text-transform: uppercase;
+}
+
+.text-parent-label {
+    @include parent-label;
 }
 
 // VALUE
