--- a/packages/end-user/src/css/components/_icon-feedback.scss
+++ b/packages/end-user/src/css/components/_icon-feedback.scss
@@ -34,4 +34,8 @@
         font-size: $font-size-lg;
         padding-right: $spacing-md;
     }
+
+    &--bold &__label {
+        font-weight: bold;
+    }
 }
