--- a/packages/end-user/src/css/components/_card.scss
+++ b/packages/end-user/src/css/components/_card.scss
@@ -1,7 +1,7 @@
 // CARDS
 $card-bg: white;
 $card-width: 400px;
-$card-padding-bottom: $spacing-xl;
+$card-padding-bottom: $spacing-xx;
 $card-padding-top: $spacing-xl;
 $card-padding-horizontal: $spacing-xl;
 
@@ -11,7 +11,7 @@ $card-padding-horizontal: $spacing-xl;
     box-sizing: border-box;
     margin: 0 auto;
     max-width: $card-width;
-    min-height: 200px;
+    min-height: 440px;
     position: relative;
     width: 100%;
     padding: $card-padding-top $card-padding-horizontal $card-padding-bottom $card-padding-horizontal;
@@ -22,24 +22,33 @@ $card-padding-horizontal: $spacing-xl;
 
     &--wide {
         max-width: 550px;
+        .card__error {
+            width: 210%;
+        }
     }
-
     &--auto-height {
         min-height: auto;
     }
 
+    &--error {
+        background: $color-light-red;
+        overflow: hidden;
+    }
+
+    &__error {
+        height: 200%;
+        border-radius: 100% 100% 0 0;
+        background-color: white;
+        top: 217px;
+        position: absolute;
+        width: 250%;
+        margin-left: -300px;
+    }
+
     &__content {
         padding: $card-padding-top $card-padding-horizontal $card-padding-bottom $card-padding-horizontal;
+        position:relative;
     }
-
-    &--slim {
-        min-height: unset;
-    }
-
-    &--slim > &__content{
-        padding: 20px;
-    }
-
 
     &__message {
         padding: $spacing-sm;
