UIP-2837 Added break-word

--- a/packages/ui-library/src/css/multivalues.scss
+++ b/packages/ui-library/src/css/multivalues.scss
@@ -61,6 +61,7 @@
                 color: $color-midnight;
                 @include text-value;
                 margin: 0;
+                @include break-word;
             }
 
             &__edit {
