--- a/packages/ui-library/src/css/inputs/_dropdown.scss
+++ b/packages/ui-library/src/css/inputs/_dropdown.scss
@@ -68,7 +68,10 @@ $option-padding: 7px $spacing-xl 7px $spacing-md;
 
     .select-list {
         @include option-list;
-        display: inline-block;
+
+        > div {
+            display: inline-block;
+        }
 
         // each item in dropdown
         .select-option,
