--- a/packages/ui-library/src/css/layout/_hero-chart.scss
+++ b/packages/ui-library/src/css/layout/_hero-chart.scss
@@ -79,6 +79,11 @@
         margin: 0 0 $spacing-md;
     }
 
+    &__top-chart,
+    &__bottom-chart {
+        max-width: 850px;
+        display: inline-block;
+    }
     &__top-chart {
         .recharts-tooltip-wrapper {
             margin-top: -5px;
