UIP-2648 Style Nav Frame

--- a/packages/ui-library/src/css/layout.scss
+++ b/packages/ui-library/src/css/layout.scss
@@ -26,6 +26,7 @@
 @import 'password-meter';
 @import 'templates/expandable-row-tooltip.scss';
 @import 'templates/section-columns';
+@import 'layout/nav-frame';
 
 $layout-header-height: 46px;
 $layout-nav-width: 205px;
