move all icons to same folder

--- a/packages/end-user/src/css/_global-vars.scss
+++ b/packages/end-user/src/css/_global-vars.scss
@@ -175,7 +175,7 @@ $zindex__elevated:       10;
 $zindex__base:            0;
 $zindex__hidden:        -10;
 
-$img-path: '../images/';
+$img-path: '../../icons/';
 
 @mixin message-button-css {
     button,
