--- a/packages/end-user/src/css/components/_dropdown.scss
+++ b/packages/end-user/src/css/components/_dropdown.scss
@@ -7,7 +7,7 @@ $caret-height: 16px;
         right: $spacing-sm;
         top: 50%;
         transform: translateY(-50%);
-        background: url('images/caret.svg') center no-repeat;
+        background: url('../icons/caret.svg') center no-repeat;
         height: 8px;
         width: 10px;
         pointer-events: none;
