--- a/packages/end-user/src/css/components/_step-link.scss
+++ b/packages/end-user/src/css/components/_step-link.scss
@@ -9,7 +9,7 @@
 
         &:after {
             content: '';
-            background: url('images/caret-blue.svg') center no-repeat;
+            background: url('../icons/caret-blue.svg') center no-repeat;
             padding: $spacing-xs 0;
             position: absolute;
             height: $caret-height;
