added padding back into tabset and if there is a section no extra padding is added

--- a/packages/ui-library/src/css/buttons.scss
+++ b/packages/ui-library/src/css/buttons.scss
@@ -852,3 +852,10 @@ button.tile-button--side-icon {
 .button-add-modal {
     float: right;
 }
+
+.tab-set-children {
+    padding-left: $spacing-lg;
+    > .page-section {
+        margin: 0;
+    }
+}
