fixed gwyns comments and made padding into margin

--- a/packages/ui-library/src/css/buttons.scss
+++ b/packages/ui-library/src/css/buttons.scss
@@ -854,8 +854,8 @@ button.tile-button--side-icon {
 }
 
 .tab-set-children {
-    padding-left: $spacing-lg;
+    margin-left: $spacing-lg;
     > .page-section {
-        margin: 0;
+        margin-left: 0;
     }
 }
