Fix some mobile issues in end-user

--- a/packages/ui-library/src/css/end-user/_user-nav.scss
+++ b/packages/ui-library/src/css/end-user/_user-nav.scss
@@ -73,8 +73,8 @@
         }
     }
     //and add the tab styling to the full nav
-    padding-bottom: $spacing-lg;
-    margin-bottom: $spacing-xl;
+    padding-bottom: $spacing-md;
+    margin-bottom: $spacing-md;
     border-bottom: 1px solid $color-rabbit-fur;
 
 }
