--- a/packages/end-user/src/css/components/_text-block.scss
+++ b/packages/end-user/src/css/components/_text-block.scss
@@ -8,6 +8,12 @@
         text-align: left;
     }
 
+    &--overflow-ellipsis {
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+    }
+
     &--full-width {
         width: 100%;
 
