--- a/packages/ui-library/src/css/icons/_style.scss
+++ b/packages/ui-library/src/css/icons/_style.scss
@@ -2,11 +2,12 @@
 
 @font-face {
   font-family: '#{$icomoon-font-family}';
-  src:
-    url('#{$icomoon-font-path}/#{$icomoon-font-family}.woff2?y9lu4j') format('woff2'),
-    url('#{$icomoon-font-path}/#{$icomoon-font-family}.ttf?y9lu4j') format('truetype'),
-    url('#{$icomoon-font-path}/#{$icomoon-font-family}.woff?y9lu4j') format('woff'),
-    url('#{$icomoon-font-path}/#{$icomoon-font-family}.svg?y9lu4j##{$icomoon-font-family}') format('svg');
+  src:  url('#{$icomoon-font-path}/#{$icomoon-font-family}.eot?p6zuti');
+  src:  url('#{$icomoon-font-path}/#{$icomoon-font-family}.eot?p6zuti#iefix') format('embedded-opentype'),
+    url('#{$icomoon-font-path}/#{$icomoon-font-family}.woff2?p6zuti') format('woff2'),
+    url('#{$icomoon-font-path}/#{$icomoon-font-family}.ttf?p6zuti') format('truetype'),
+    url('#{$icomoon-font-path}/#{$icomoon-font-family}.woff?p6zuti') format('woff'),
+    url('#{$icomoon-font-path}/#{$icomoon-font-family}.svg?p6zuti##{$icomoon-font-family}') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -26,7 +27,6 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
 
 .icon-account {
   &:before {
@@ -381,6 +381,11 @@
 .icon-minus-rounded {
   &:before {
     content: $icon-minus-rounded; 
+  }
+}
+.icon-native-app {
+  &:before {
+    content: $icon-native-app; 
   }
 }
 .icon-network {
@@ -748,5 +753,4 @@
     content: $icon-welcome; 
   }
 }
-
 
