--- a/packages/ui-library/src/css/icons/_variables.scss
+++ b/packages/ui-library/src/css/icons/_variables.scss
@@ -1,5 +1,5 @@
-$icomoon-font-path: "../fonts/icons"; // KEEP - designates relative path to icons file where this is imported
-$icomoon-font-family: "iconfont"; // KEEP - designates name of font
+$icomoon-font-family: "iconfont" !default;
+$icomoon-font-path: "fonts" !default;
 
 $icon-account: "\61";
 $icon-admin-account: "\74";
@@ -72,6 +72,7 @@ $icon-lockout: "\e912";
 $icon-menu: "\6d";
 $icon-minus: "\2d";
 $icon-minus-rounded: "\5f";
+$icon-native-app: "\e934";
 $icon-network: "\25";
 $icon-new-window: "\e91f";
 $icon-next: "\7d";
@@ -145,5 +146,4 @@ $icon-view-hidden: "\2f";
 $icon-walkthrough: "\4d";
 $icon-wand: "\57";
 $icon-welcome: "\77";
-
 
