--- a/packages/ui-library/src/css/layout.scss
+++ b/packages/ui-library/src/css/layout.scss
@@ -978,8 +978,12 @@ $color-grey-minor-1: $color-neutral-30;
         flex-flow: row-reverse;
     }
 
-    &__save {
-        margin-right: 0;
+    &--left-align &__buttons {
+        flex-flow: row;
+    }
+
+    &--left-align {
+        text-align: left;
     }
 }
 
